fixed styling issue: centered text, fixed missing background phot

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -131,6 +131,10 @@
   flex-wrap: wrap;
 }
 
+#text-box {
+  width: 80vw;
+}
+
 #image-box {
   width: 50vw;
   height: 40vh;
